# immich-auto-cast

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: video-support.md
docs/brainstorms/: 2026-07-17-web-control-dashboard-requirements.md
docs/plans/: 2026-07-17-001-feat-immich-chromecast-rotation-plan.md  2026-07-17-002-feat-web-control-dashboard-plan.md
scripts/: install.sh  update.sh
src/cast_immich/: __init__.py  __main__.py  app.py  cast.py  config.py  coordinator.py  history.py  immich.py  relay.py  runtime.py  web.py
src/cast_immich/static/: app.js  index.html  styles.css
tests/: conftest.py  test_app.py  test_cast.py  test_config.py  test_coordinator.py  test_history.py  test_immich.py  test_relay.py  test_runtime.py  test_web.py
tests/hardware/: test_chromecast_smoke.py
