[project]
name = "cast-immich"
version = "0.1.0"
description = "Safely rotate Immich photos on an idle Chromecast"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiohttp>=3.12,<4",
  "pillow>=11,<13",
  "pychromecast==14.0.10",
]

[project.scripts]
cast-immich = "cast_immich.__main__:main"

[dependency-groups]
dev = [
  "mypy>=1.16",
  "pytest>=8.4",
  "pytest-asyncio>=1.0",
  "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cast_immich"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["hardware: requires a physical Chromecast"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["cast_immich"]

[[tool.mypy.overrides]]
module = ["pychromecast.*"]
ignore_missing_imports = true
